# pvv-nixos-config

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .mailmap  .remoteenv  .remoteignore.toml  .sops.yaml  README.MD  README.md  base.nix  configuration.nix  flake.nix  hardware-configuration.nix  justfile  shell.nix  statix.toml  topology.nix  values.nix
.gitea/workflows/: build-topology-graph.yml  eval.yml  test.yml
base/: default.nix  flake-input-exporter.nix  hardening.nix  mitigations.nix  networking.nix  nix.nix  programs.nix  sops.nix  vm.nix
base/services/: acme.nix  auditd.nix  auto-upgrade.nix  dbus.nix  fluentbit.nix  irqbalance.nix  journald-upload.nix  nginx.nix  (+16 more)
docs/: development-misc.md  development.md  secret-management.md  users.md
hosts/temmie/services/userweb/apache-log-processor/: Cargo.toml  default.nix
hosts/temmie/services/userweb/apache-log-processor/src/: main.rs
keys/: oysteikt.pub
misc/: builder.nix  metrics-exporters.nix  motd  rust-motd.nix
modules/: bluemap.nix  debug-locations.nix  drumknotty.nix  grzegorz.nix  home-areas.nix  hugepages.nix  kerberos_auth.nix  matrix-ooye.nix  python-http-handlers.nix  robots-txt.nix  rsync-pull-targets.nix  sendonly-postfix.nix  snakeoil-certs.nix  snappymail.nix  spotifyd.nix
overlays/: nginx-test.nix
overlays-compat/: overlays.nix
shells/: cuda.nix
topology/: default.nix  non-nixos-machines.nix
users/: adriangl.nix  alb.nix  albertba.nix  alfhj.nix  amalieem.nix  danio.nix  default.nix  eirikwit.nix  felixalb.nix  frero.nix  jonmro.nix  oysteikt.nix  pederbs.nix  vegardbm.nix
(+293 files in other folders)
